force-app/main/default/objects/Renewal_Activity__c/Renewal_Activity__c.object-meta.xml
<CustomObject>
    <description>Append-only timeline entry on a Lease Renewal. Never edited or deleted.</description>
    <label>Renewal Activity</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>