force-app/main/default/objects/Renewal_Activity__c/fields/Lease_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Lease_Renewal__c</fullName>
    <label>Lease Renewal</label>
    <referenceTo>Lease_Renewal__c</referenceTo>
    <relationshipLabel>Renewal Activities</relationshipLabel>
    <relationshipName>Renewal_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>