force-app/main/default/objects/Renewal_Activity__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Call</fullName><default>true</default><label>Call</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Visit</fullName><default>false</default><label>Visit</label></value>
            <value><fullName>Note</fullName><default>false</default><label>Note</label></value>
            <value><fullName>System</fullName><default>false</default><label>System</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>